--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,6 +1,6 @@
 <div style="display: grid; grid-template-columns: 2fr 1.4fr; grid-gap: 2px;">
   <div>
-    <div class="d-flex justify-content-center mt-2" style="position: sticky; top: 0px; z-index: 1000;  background-color: rgba(244,  244, 244, 0.8)">
+    <div class="d-flex justify-content-center mt-2" style="position: sticky; top: 0px; z-index: 1000;  background-color: rgb(244,  244, 244)">
       <%= simple_form_for :search, method: "get", class: 'form-inline' do |f| %>
         <div class="d-flex">
          <div class="mr-2 mb-n2 p-2">
