--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,81 +1,67 @@
 .button-spot {
-  padding: 12px 22px;
-  font-size: 20px;
-  text-align: center;
-  cursor: pointer;
-  outline: none;
-  color: #fff;
-  background-color: rgba(255, 144, 75, 0.8);
-  border: none;
-  border-radius: 15px;
-  box-shadow: 0 9px #999;
+color: #fff !important;
+text-transform: uppercase;
+text-decoration: none;
+background: #52BCEA;
+padding: 20px;
+border-radius: 50px;
+display: inline-block;
+border: none;
+transition: all 0.4s ease 0s;
+}
+.button-spot:hover {
+text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
+-webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+-moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+transition: all 0.4s ease 0s;
 }
 
-.button-spot:hover {background-color: rgb(255, 144, 75)}
-
-.button-spot:active {
-  background-color: rgb(255, 144, 75);
-  box-shadow: 0 5px #666;
-  transform: translateY(4px);
-}
 
 
 .magicBtn {
   transform: scale(1.3);
-  background-color: rgba(255, 145, 77, 0.301);
-  border: rgba(0,0,0,0.4), solid, 1px;
+  background-color: transparent;
   border-radius: 9px;
-  color: white;
-  border: none;
-  padding: 15px;
-  font-size: 15px;
+  color: rgba(255,255,255,0.4);
+  padding: 14px;
+  font-size: 17px;
   width: 140px;
   text-align: center;
   overflow: hidden;
- transition: ease .5s;
+  transition: ease .5s;
+  font-family: 'Staatliches', cursive;
 }
-
-
-
 .overflowCont {
   color: white;
   display: inline;
   left: -100px;
   position: relative;
-
-  background: linear-gradient(to right, #ff904b, #02aee7);
+  background: rgba(255,255,255,0.8);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
-
 .btnName {
   display: inline;
   position: relative;
   left: -28px;
-
-  background: linear-gradient(to right, #ff904b, #02aee7);
+  background: rgba(255,255,255,0.8);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
 .moveGroup {
   left: 0px;
   position: relative;
   transition: cubic-bezier(0.72, -0.22, 0.38, 1.25) .5s;
 }
-
 .activate {
   left: 125px;
 }
-
 a,button {
   &:focus {
     border:none;
     outline:none;
   }
 }
-
 .focus-blank{
   &:active {
   border:none;
