changed colour of the button so it matches the logo

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -82,3 +82,12 @@ a,button {
   outline:none;
   }
 }
+
+.btn-primary {
+  background-color: #2697D5;
+}
+
+.btn-primary:hover {
+  background-color: #2e3657;
+  border: 1px solid #2e3657;
+} 
